# rrobot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/rrobot/ai/: ai.hpp.in  aibasefunctions.hpp.in  aifeatures.hpp.in  aiiface.hpp.in  ble33iface.hpp.in  greedyai.hpp.in  greedyai.hpp.in.old  saxel.hpp.in  saxprocessor.hpp.in
include/rrobot/com/: external.hpp.in  rrserialmc.hpp.in  server.hpp.in
include/rrobot/environment/: chwmodel.hpp.in  clogging.hpp.in  cqueues.hpp.in  crr_server.hpp.in  crrserial.hpp.in  environment.hpp.in  environmentProcessor.hpp.in  mspsensors.hpp.in  mspversion.hpp.in  multitype.hpp.in  version.hpp.in
include/rrobot/events/: cmodes.hpp.in  event.hpp.in  event.tmpl.hpp.in  eventhandler.hpp.in  eventrunner.hpp.in  mspcommands.hpp.in  mspdirection.hpp.in
include/rrobot/events/serializers/: jserializer.hpp.in  mserializer.hpp.in  serializer.hpp.in
include/rrobot/exceptions/: exception.hpp.in  exceptions.hpp.in
include/rrobot/handlers/: aihandler.hpp.in  currentstatehandler.hpp.in  identhandler.hpp.in  rrmapper.hpp.in  statushandler.hpp.in  threadmanager.hpp.in  uihandler.hpp.in
include/rrobot/protocols/curators/: encoder.hpp.in
include/rrobot/protocols/curators/multiwii/: abstract_sensor_curator.hpp.in  crc.hpp.in  rmmsp_cmd_rotate_curator.hpp.in  rmmsp_orientation_curator.hpp.in  rmmsp_sensor_acc_curator.hpp.in  rmmsp_sensor_curator.hpp.in  rmmsp_sensor_gyro_curator.hpp.in  rmmsp_sensor_mag_curator.hpp.in  rmmsp_sonic_curator.hpp.in  rmultiwii.hpp.in  rmultiwii_curator.hpp.in
include/rrobot/protocols/curators/rrp/: curator.tmpl.hpp.in  mspevent.hpp.in  rrpcurator.hpp.in  rrpcuratorabstract.hpp.in
include/rrobot/state/: rrpqueue_names.hpp.in  rrpstatus.hpp.in  rrqueue_manager.hpp.in  state.hpp.in  state_manager.hpp.in
resources/: rrobot.pc.in
src/rrobot/: main.cpp
src/rrobot/ai/: ble33iface.cpp  greedyai.cpp  greedyai.cpp.old  saprocessor.cpp  saxprocessor.cpp
src/rrobot/com/: rrserialmc.cpp  server.cpp
src/rrobot/environment/: environmentProcessor.cpp
src/rrobot/events/: eventrunner.cpp
src/rrobot/events/serializers/: jserializer.cpp  mserializer.cpp
src/rrobot/handlers/: aihandler.cpp  currentstatehandler.cpp  identhandler.cpp  statushandler.cpp  threadmanager.cpp  uihandler.cpp
src/rrobot/protocols/curators/: encoder.cpp
src/rrobot/protocols/curators/multiwii/: rmmsp_orientation_curator.cpp  rmmsp_sensor_curator.cpp  rmmsp_sensor_mag_curator.cpp  rmmsp_sonic_curator.cpp  rmultiwii.cpp  rmultiwii_curator.cpp
src/rrobot/protocols/curators/rrp/: msp_ident_curator.cpp  msp_mode_curator.cpp  msp_rotate_curator.cpp  msp_sensor_acc_curator.cpp  msp_sensor_gyro_curator.cpp  msp_sensor_mag_curator.cpp  msp_status_curator.cpp
src/rrobot/state/: rrqueue_manager.cpp  state_manager.cpp
test/: test_ble33iface.cpp  test_encoder.cpp  test_environmentprocessor.cpp  test_eventrunner.cpp  test_greedyai.cpp  test_identhandler.cpp  test_jserializer.cpp  test_rmmsp_sensor_curator.cpp  test_rmmsp_sensor_mag_curator.cpp  test_rmultiwii.cpp  test_rrpcurator.cpp  test_rrqueue_manager.cpp  test_saxprocessor.cpp  test_state_manager.cpp  test_statushandler.cpp  test_threadmanager.cpp  test_uihandler.cpp
test/resources/manifests/: virtual.json
